--- a/days15/package.json
+++ b/days15/package.json
@@ -2,11 +2,11 @@
   "name": "days15",
   "version": "1.0.0",
   "description": "days-15",
-  "main": "server.js",
+  "main": "index.js",
   
   "scripts": {
     
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "soleh",
   "license": "ISC",
