--- a/days15/package.json
+++ b/days15/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "days-15",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   
   "scripts": {
+    
     
     "start": "node index.js"
   },
