--- a/days18/package.json
+++ b/days18/package.json
@@ -15,14 +15,18 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "express-flash": "^0.0.2",
+    "express-flash-notification": "^0.5.0",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-popup": "^0.1.14",
     "node-time-ago": "^1.0.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "popups": "^1.1.3",
     "railway": "^2.0.17",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
