--- a/days18/package.json
+++ b/days18/package.json
@@ -4,10 +4,10 @@
   "description": "days-17",
   "main": "index.js",
   "engines": {
-    "node": "20.x"
+    "node": "14.x"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "soleh",
   "license": "ISC",
