--- a/days18/package.json
+++ b/days18/package.json
@@ -26,7 +26,8 @@
     "popups": "^1.1.3",
     "railway": "^2.0.17",
     "sequelize": "^6.37.3",
-    "sweetalert2": "^11.14.1"
+    "sweetalert2": "^11.14.1",
+    "vercel-sapper": "^0.44.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
