--- a/days18/vercel.json
+++ b/days18/vercel.json
@@ -1,1 +1,11 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api/index.js" }] }
+{
+  "version": 2,
+  "builds": [{
+    "src": "src/index.js",
+    "use": "@vercel/node"
+  }],
+  "routes": [{
+    "src": "/(.*)",
+    "dest": "src/index.js"
+  }]
+}
