--- a/days18/package.json
+++ b/days18/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^10.0.0",
     "express": "^4.21.0",
     "express-flash": "^0.0.2",
     "express-flash-notification": "^0.5.0",
